--- a/libs/modules/savebar.less
+++ b/libs/modules/savebar.less
@@ -46,28 +46,50 @@
 }
 
 .save {
-	cursor: pointer;
-	&:after {
-		.icon;
-		content: @i-star-o;
-		color: @gray-5;
-		cursor: pointer;
-		margin-left: .25em;
-		display: inline-block;
-		font-size: .8em;
-		@media (min-width: 600px) {
-			content: '';
-		}
-	}
-	&:hover:after {
-		content: @i-star-o;
-	}
 	&.saved {
 		background-color: @yellow-lighter;
 		outline: 1rem/3 solid @yellow-lighter;
-		&:after {
+		.save-button {
+			display: inline-block;
 			color: @yellow;
-			content: @i-star;
+			&:before {
+				content: @i-star;
+			}
 		}
 	}
+}
+
+.save-button {
+	cursor: pointer;
+	display: inline-block;
+	font-size: .6em;
+	font-weight: @font-weight-base;
+	color: @gray-5;
+	position: relative;
+	bottom: .2em;
+	&:before {
+		.icon;
+		content: @i-star-o;
+		cursor: pointer;
+		margin: 0 .25em 0 .75em;
+		display: inline-block;
+	}
+	@media (min-width: 600px) {
+		display: none;
+	}
+	&.saved {
+		display: inline-block;
+		color: @yellow;
+		&:before {
+			content: @i-star;
+
+		}
+	}
+}
+
+h1:hover .save-button,
+h2:hover .save-button,
+h3:hover .save-button,
+h4:hover .save-button {
+	display: inline-block;
 }
