--- a/libs/template/sidebar-blog.jade
+++ b/libs/template/sidebar-blog.jade
@@ -1,30 +1,13 @@
 - var section = "Brand"
     .side-nav-beta
-        .well(style="background-color: #fff; border-left: 0px; border-right: 0px; border-bottom: 0px; border-top: 8px #fcbb69 solid !important; margin-top: 2rem; padding:.75em 0 !important;")
+        .blog-sidebar--search
             fieldset
-                //label(for="search") Search this blog
                 .search-results__field.field-group.field-group--buttons
                     input(type="search", placeholder="", value="Search", style="border: 1px solid #ccc;")
                     button.btn.btn-primary(style="background-color:#fcbb69;border: 1px solid #fcbb69;")
                         i.icon-search
 
-        //.well(style="background-color: #f2f8ff; border: 0px #dfdfdf solid;")
-            label Recent posts
-            ul
-                li
-                    a(href="#") Making things simpler: Personal Independence Payment (PIP)
-                li
-                    a(href="#") Introducing… immigration advice
-                li
-                    a(href="#") How people look for things
-                li
-                    a(href="#") Casebook: An intro to what's been happening
-                li
-                    a(href="#") A present (kind of) from the digital team
-                li
-                    a(href="#") Your digital team needs you!
-
-        .well(style="background-color: #fee4c3; border: 0px #dfdfdf solid; margin-top:0; margin-bottom:2rem;")
+        .blog-sidebar--category
             fieldset
                 label(for="exampleSelect1") Select Category
                 .dropdown
@@ -35,41 +18,15 @@
                         option Casebook
                         option Research
 
-        .cards(style="color:#fff; background-color:#32457E;")
+        .blog-sidebar--updates
             .card-banner-top
                 p(style="color:#fff;") Get updates of new blogs here
             .card-text
                 p If you would like to test any of the new future research and testing you can sign up on the #[a(href="#" style="color:#FCBB69;") Get Involved page].
                 fieldset
-                    label(for="name", style="color:#fff;") Your name
-                    div(style="margin-bottom: 10px;")
-                        input(type="Email", placeholder="Name", style="padding: 0.75rem !important;")
-                    label(for="email", style="color:#fff;") Your email
-                    div(style="margin-bottom: 10px;")
-                        input(type="Email", placeholder="Email", style="padding: 0.75rem !important;")
-                        button.btn.btn-primary.tick-button-icon(style="padding: 1.5rem 0.5rem -1.5rem 0 !important;") Submit
-
-
-        //.well(style="background-color: #f2f8ff; border: 0px #dfdfdf solid;")
-            h3(style="font-weight:700;font-size:1rem;") Get updates by email
-            fieldset
-                label(for="name") Your name
-                .search-results__field(style="width:95%; margin-bottom: 10px;")
+                    label(for="name") Your name
                     input(type="Email", placeholder="Name")
-                label(for="email") Your email
-                .search-results__field(style="width:95%; margin-bottom: 10px;")
+                fieldset
+                    label(for="email") Your email
                     input(type="Email", placeholder="Email")
-                    button.btn.btn-primary.right-button-icon Submit
-
-        //.cards(style="color:#fff; background-color:#32457E;")
-            .card-banner-top
-                p(style="color:#fff;") Policy
-            .card-image-top
-                img(src="images/laptop-branding.png" alt="Laptop")
-            .card-text
-                p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
-                button.btn.btn-primary.right-button-icon(type="button" style="background-color:#FFBF47; border-color:#FFBF47;") Continue
-
-        //.callout--generous
-            h3 Page
-            p Pagey page
+                button.btn.btn-primary.tick-button-icon Submit
