--- a/libs/template/sidebar-blog.jade
+++ b/libs/template/sidebar-blog.jade
@@ -3,7 +3,7 @@
         .blog-sidebar--search
             fieldset
                 .search-results__field.field-group.field-group--buttons
-                    input(type="search", placeholder="", value="Search", style="border: 1px solid #ccc;")
+                    input(type="search", placeholder="Search", style="border: 1px solid #ccc;")
                     button.btn.btn-primary(style="background-color:#fcbb69;border: 1px solid #fcbb69;")
                         i.icon-search
 
