--- a/libs/template/template-blog.jade
+++ b/libs/template/template-blog.jade
@@ -164,7 +164,7 @@ html
 				if sidebar
 					.main-content__right(id="main", role="main")
 						if title
-							//.title
+							.title
 								h1.title__heading.js-ref
 									span.title__title #{title}
 						if toolbars
