Update email mockup

--- a/libs/jade/dev/reference/reference-action.jade
+++ b/libs/jade/dev/reference/reference-action.jade
@@ -2,7 +2,7 @@ block settings
 	- var title = "Reference action"
 	- var sidebar = true
 	- var mockup = true
-	- var dir = "../"
+	- var dir = "../../"
 
 extends /template/template.jade
 
