--- a/libs/jade/dev/reference/savebar.jade
+++ b/libs/jade/dev/reference/savebar.jade
@@ -1,7 +1,7 @@
 block settings
 	- var title = "Saving content"
 	- var sidebar = true
-	- var dir = "../"
+	- var dir = "../../"
 
 extends /template/template.jade
 
