Moved work from the blog branch into the /dev/blog folder

--- a/libs/site.less
+++ b/libs/site.less
@@ -82,6 +82,8 @@
 @import "modules/notice";
 @import "modules/slide";
 @import "modules/savebar";
+@import "modules/cards";
+@import "modules/blog";
 
 /* IE styles */
 @import "base/ie";
