--- a/libs/jade/dev/blog/blog-post.jade
+++ b/libs/jade/dev/blog/blog-post.jade
@@ -2,11 +2,10 @@ block settings
 	- var title = "Working with advisers to design new PIP content"
 	- var sidebar = true
 	- var toolbars = false
-	//- var cookiemonster = true
-	- var mockup = false
+	- var blog = true
 	- var dir = "../../"
 
-extends /template/template-blog.jade
+extends /template/template.jade
 
 //block breadcrumbs
 	+breadcrumbs([
