--- a/libs/modules/blog.less
+++ b/libs/modules/blog.less
@@ -138,24 +138,35 @@
 	}
 }
 
-//
-/* Styles that aren't being used */
-//
-
-.styleguide--header--content {
-	overflow: auto;
+// Header
+.blog-header {
+    background-color: @heritage-blue;
+    &--content {
+        max-width: @breakpoint-lg;
+        margin: 0 auto;
+        clear: both;
+        img {
+            display: inline-block;
+            width: 220px;
+            padding: @box-spacing-vertical*1.5 @box-spacing-horizontal;
+        }
+        a:hover,
+        a:focus {
+            background: none;
+        }
+    }
 }
-.styleguide--header--content-nav a:visited {
-	color: white;
-}
 
-.styleguide--header--content-nav {
+.blog-navigation {
 	float: right;
-	text-align: right;
 	padding: 1.5rem 1rem;
 	display: inline-block;
-	@media screen and (max-width: @screen-xs-max) {
+	list-style: none;
+	@media screen and (max-width: 750px) {
 		display: none;
+	}
+	li {
+		display: inline;
 	}
 	a {
 		padding: 1rem;
@@ -163,30 +174,18 @@
 		border-bottom: none;
 		font-weight: 600;
 		color: white;
-		&:hover, &:active {
-			color: @heritage-blue;
+		&:hover,
+		&:active,
+		&:visited  {
+			color: @white;
 			border-bottom: none;
-		}
-	}
-	&--1 {
-		float: right;
-		text-align: right;
-		width: 500px;
-		padding: 1.5rem 1rem;
-		display: inline-block;
-		a {
-			padding: 1rem;
-			text-decoration: none;
-			border-bottom: none;
-			font-weight: 600;
-			color: @heritage-blue;
-			&:hover {
-				color: @blue;
-				border-bottom: none;
-			}
 		}
 	}
 }
+
+//
+/* Styles that aren't being used */
+//
 
 /*.digital-blog-background {
 	background-color: #e2e2e2 !important;
