--- a/libs/template/sidebar-blog.jade
+++ b/libs/template/sidebar-blog.jade
@@ -1,5 +1,5 @@
 - var section = "Brand"
-    .side-nav-beta
+    .side-nav-beta.blog-sidebar
         .blog-sidebar--search
             fieldset
                 .search-results__field.field-group.field-group--buttons
