--- a/libs/template/template.jade
+++ b/libs/template/template.jade
@@ -124,9 +124,10 @@ html.no-js
 		else if blog
 			header.blog-header
 				.blog-header--content
-					a(href="blog-home.html")
+					a(href="blog-home.html", style="border: none;")
 						img(src="#{dir}images/ca-logo-hz-white-280px.svg")
 
+					#toggle
 					ul.blog-navigation
 						li
 							a(href="blog-team.html") The Team
