Update reference text

--- a/libs/jade/dev/reference/reference-action.jade
+++ b/libs/jade/dev/reference/reference-action.jade
@@ -52,11 +52,11 @@ block content
 								p Send your saved references to yours, a friend or family members email address
 								fieldset
 									label(for="standardField", style="background: #fff; padding: 0px; position: relative; top: 0px; border-top: 0px solid #eeeeee;") Your name
-									span.form-hint The name of the person referring this witness to the Witness Service
 									input(id="standardField" placeholder="" type="text")
 
 								fieldset
-									label(for="standardField", style="background: #fff; padding: 0px; position: relative; top: 0px; border-top: 0px solid #eeeeee;") Your email address
+									label(for="standardField", style="background: #fff; padding: 0px; position: relative; top: 0px; border-top: 0px solid #eeeeee;") Recipients email address
+									span.form-hint This can be your own, or you can add multiple addressess seperated with a comma
 									input(id="standardField" placeholder="" type="email")
 
 								button.btn-secondary.email-button-icon(type="button") Email
