Amend colours for links

--- a/libs/jade/dev/reference/reference-action.jade
+++ b/libs/jade/dev/reference/reference-action.jade
@@ -56,10 +56,10 @@ block content
 
 								fieldset
 									label(for="standardField", style="background: #fff; padding: 0px; position: relative; top: 0px; border-top: 0px solid #eeeeee;") Recipients email address
-									span.form-hint This can be your own, or you can add multiple addressess seperated with a comma
+									span.form-hint This can be your own, or you can add multiple addresses seperated with a comma
 									input(id="standardField" placeholder="" type="email")
 
-								button.btn-secondary.email-button-icon(type="button") Email
+								button.btn-secondary.email-button-icon(type="button") Send email
 
 
 					
