--- a/libs/modules/savebar.less
+++ b/libs/modules/savebar.less
@@ -106,9 +106,9 @@ h4:hover .save-button {
 .email-links {
     margin: @box-spacing-vertical 0;
     padding: @box-spacing-vertical;
-    background-color: @aqua-light;
+    background-color: @white;
     color: @heritage-blue;
-    border: 1px solid @aqua;
+    border: 1px solid @heritage-yellow;
     font-size: @font-size-base;
     font-weight: @font-weight-bolder;
     display: block;
@@ -129,12 +129,12 @@ h4:hover .save-button {
     &:hover,
     &:focus,
     &:active {
-        background-color: darken(@aqua-light, 10%);
-        border: 1px solid @aqua;
+        background-color: darken(@heritage-yellow-lighter, 10%);
+        border: 1px solid @heritage-yellow;
     }
 
     &:visited {
-        border: 1px solid @aqua;
+        border: 1px solid @heritage-yellow;
     }
 
     // Changing the blocklink icon
