Update wording on blog

--- a/libs/jade/dev/blog/blog-post-media.jade
+++ b/libs/jade/dev/blog/blog-post-media.jade
@@ -37,6 +37,8 @@ block content
 
 		p We don't think it's applicable to have images for every post/communication. But we also don't think it's appropriate to have silhouettes for every communication as well.
 
+		p If the organisations stance is still use silhouettes then we will need to look at documentating how individuals can create these or if there is a way we can progress the appearance to make them more descriptive eg combining them.
+
 		p Images are memorable and when used to communicate can be worth a thousand words.
 
 		.blog-tag
